--- a/airline-web/public/stylesheets/main.css
+++ b/airline-web/public/stylesheets/main.css
@@ -1684,7 +1684,7 @@ i, .italic {
 .px-10 { padding-left: 40px; padding-right: 40px; }
 .px-12 { padding-left: 48px; padding-right: 48px; }
 .px-16 { padding-left: 64px; padding-right: 64px; }
-.py-0 { padding-top: 0px; padding-bottom: 0px; }
+.py-0 { padding-top: 0px !important; padding-bottom: 0px !important; }
 .py-05 { padding-top: 2px; padding-bottom: 2px; }
 .py-1 { padding-top: 4px; padding-bottom: 4px; }
 .py-2 { padding-top: 8px; padding-bottom: 8px; }
